openvidu-server: new behavior upon KurentoClient disconnection